--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.16.1'
+          node-version: '14'
 
       - name: Install dependencies
         run: npm install
+
+      - name: Run tests
+        run: npm test
 
   deploy:
     runs-on: ubuntu-latest
@@ -33,10 +36,11 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_PATH: ${{ secrets.REMOTE_PATH }}
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
-          scp -i private_key -r ./* $REMOTE_USER@$REMOTE_HOST:$REMOTE_PATH
-          ssh -i private_key $REMOTE_USER@$REMOTE_HOST 'cd $REMOTE_PATH && npm install && pm2 restart all'
+          scp -i private_key -P $REMOTE_PORT -r ./* $REMOTE_USER@$REMOTE_HOST:$REMOTE_PATH
+          ssh -i private_key -p $REMOTE_PORT $REMOTE_USER@$REMOTE_HOST 'cd $REMOTE_PATH && npm install && pm2 restart all'
           rm private_key
