--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "cypress": "^13.6.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "jasmine": "^5.1.0",
